manifests/istio/admin-apps-config.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dashboard-https
  namespace: istio-ingress
spec:
  host: kubernetes-dashboard-kong-proxy.kubernetes-dashboard.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: SIMPLE
        insecureSkipVerify: true
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kiali-https
  namespace: istio-ingress
spec:
  host: kiali.istio-system.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 20001
      tls:
        mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: admin-dashboards
  namespace: istio-ingress
spec:
  hosts:
  - admin.internal
  gateways:
  - admin-gateway
  http:
  - match:
    - uri:
        prefix: /dashboard/
    - uri:
        exact: /dashboard
    rewrite:
      uri: /
    route:
    - destination:
        host: kubernetes-dashboard-kong-proxy.kubernetes-dashboard.svc.cluster.local
        port:
          number: 443
  - match:
    - uri:
        prefix: /kiali/
    - uri:
        exact: /kiali
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
  - match:
    - uri:
        prefix: /prometheus/
    - uri:
        exact: /prometheus
    # rewrite:
    #   uri: /
    route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
  # # additional entries for prometheus needed for assets and api endpoints
  # - match:
  #     - uri:
  #         exact: /query
  #     - uri:
  #         prefix: /api/v1/
  #     - uri:
  #         prefix: /assets/
  #   route:
  #     - destination:
  #         host: prometheus.istio-system.svc.cluster.local
  #         port:
  #           number: 9090
  - match:
    - uri:
        prefix: /grafana/
    - uri:
        exact: /grafana
    route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
