manifests/istio/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  namespace: istio-system
spec:
  egress:
  - hosts:
    - ./*
    - default/kubernetes.default.svc.cluster.local
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
