manifests/istio/default-auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: default-allow-nothing
  namespace: istio-system
spec:
  {}
